src/objects/Business_Role_Member__c.object
<CustomObject>
    <fields>
        <fullName>Business_Role__c</fullName>
        <label>Business Role</label>
        <referenceTo>Business_Role__c</referenceTo>
        <relationshipLabel>Business Role Members</relationshipLabel>
        <relationshipName>Business_Role_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID_Calc__c</fullName>
        <formula>CASESAFEID(User__c) &amp; &apos;_&apos; &amp; Business_Role__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External ID (formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Unique External Id (User Id + &apos;_&apos; + BR Name)</description>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if BR is active for given user (manually managed)</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Manual__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if BR was assigned manually or automatically</description>
        <label>Is Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Role_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Business Role Member</label>
    <nameField>
        <displayFormat>BRM-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Role Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>UserNotChanged</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( User__c )</errorConditionFormula>
        <errorMessage>User cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UserNotNull</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL( User__c )</errorConditionFormula>
        <errorDisplayField>User__c</errorDisplayField>
        <errorMessage>User cannot be null.</errorMessage>
    </validationRules>
</CustomObject>